Fix styles on smaller screens
Issue: PLPS-109

--- a/src/views/css/packlink.css
+++ b/src/views/css/packlink.css
@@ -25,14 +25,13 @@
 }
 
 .pl-logo-wrapper {
-  width: 350px;
-  height: 60px;
-  margin-left: 20px;
-  margin-bottom: 15px;
+  width: 100%;
+  padding: 20px;
+  box-sizing: border-box;
 }
 
 .pl-dashboard-logo {
-  width: 230px;
+  width: 100%;
 }
 
 .pl-page-wrapper {
@@ -44,13 +43,8 @@
   position: relative;
   background-color: #f5f5f5;
   border-right: 1px solid #dcdcdc;
-  padding-top: 20px;
-  width: 270px;
+  max-width: 270px;
   height: 100%;
-}
-
-.pl-sidebar-wrapper .row {
-  margin: 0 !important;
 }
 
 .pl-content-wrapper {
@@ -69,7 +63,7 @@
 }
 
 .pl-content-wrapper-panel {
-  padding: 0 0 0 30px !important;
+  padding-left: 20px !important;
   height: 100%;
 }
 
@@ -78,19 +72,25 @@
 }
 
 .pl-sidebar-link-wrapper {
-  height: 50px;
+  text-align: center;
+  min-height: 50px;
   padding: 0 !important;
   cursor: pointer;
   color: #5d5d5d;
   display: flex;
+  position: relative;
 }
 
+.pl-sidebar-link-wrapper-line {
+  height: 25px;
+  margin-bottom: 25px;
+  border-bottom: 1px solid;
+  display: flex;
+  position: absolute;
+  width: 100%;
+}
 .pl-sidebar-link-wrapper * {
   pointer-events: none !important;
-}
-
-.pl-sidebar-link-wrapper hr {
-  border-color: #5d5d5d !important;
 }
 
 .pl-sidebar-link-wrapper:hover {
@@ -101,53 +101,31 @@
   color: #2095F2;
 }
 
-.pl-sidebar-link-wrapper.selected hr {
-  border-color: #2095F2 !important;
+.pl-sidebar-link-wrapper-inner {
+  padding: 10px;
+  background: whitesmoke;
+  vertical-align: middle;
+  margin: auto;
+  position: relative;
 }
 
-.pl-sidebar-small-line-wrapper {
-  height: 100%;
-  width: 30px;
-  box-sizing: border-box;
-  padding-right: 10px;
-  padding-top: 22.5px;
+.pl-sidebar-link-wrapper-inner * {
+  display: inline;
 }
-
-.pl-sidebar-line {
-  margin: 0 !important;
-}
-
-.pl-sidebar-icon-wrapper {
-  height: 100%;
-  padding-right: 10px;
-}
-
 .pl-sidebar-icon {
   position: relative;
-  top: 50%;
-  transform: translateY(-50%);
 }
 
 .pl-sidebar-text-wrapper {
-  height: 100%;
-  line-height: 50px;
-  font-size: 17px;
-  padding-right: 10px;
-}
-
-.pl-sidebar-large-line-wrapper {
-  height: 100%;
-  width: auto;
-  box-sizing: border-box;
-  padding-top: 22.5px;
-  flex-grow: 1;
+  font-size: 15px;
+  padding-top: 3px;
 }
 
 .pl-sidebar-subitem-wrapper {
-  height: 50px;
+  margin-bottom: 20px;
   color: #5d5d5d;
-  line-height: 50px;
-  padding: 0 0 0 30px !important;
+  line-height: 25px;
+  padding: 0 30px;
   cursor: pointer;
   font-size: 14px;
 }
@@ -167,21 +145,18 @@
 
 .pl-filter-wrapper {
   height: 100%;
-  padding: 10px 0 0 0 !important;
+  padding-top: 5px;
+  padding-right: 10px !important;
 }
 
 .pl-filter-method-tile {
   padding: 0 !important;
-  height: 25px;
-  line-height: 25px;
   font-size: 14px;
   color: #5d5d5d;
 }
 
 .pl-filter-method {
-  padding: 0 !important;
-  height: 35px;
-  line-height: 35px;
+  padding: 5px 0 !important;
   font-size: 12px;
   color: #5d5d5d;
 }
@@ -212,11 +187,11 @@
   line-height: 30px;
   padding: 0 !important;
   margin-right: 30px;
-  margin-top: 11px;
   font-size: 16px;
   font-weight: normal;
   color: #5d5d5d;
   cursor: pointer;
+  border-bottom: 3px solid transparent;
 }
 
 .pl-nav-item * {
@@ -230,7 +205,7 @@
 .pl-nav-item.selected {
   color: #2095F2;
   font-weight: bold;
-  border-bottom: 3px solid #2095F2;
+  border-color: #2095F2;
 }
 
 .pl-num-shipping-method-results-wrapper {
@@ -267,42 +242,37 @@
 }
 
 .pl-table-header-wrapper {
-  height: 60px;
   padding: 0 !important;
 }
 
 .pl-table-header-wrapper th {
-  height: 60px !important;
-  line-height: 60px !important;
-  padding: 0 !important;
-  border: none !important;
+  height: 60px;
+  padding: 0 5px !important;
   color: #5d5d5d !important;
   font-weight: bold !important;
   background-color: white;
   position: sticky;
   top: 0;
   z-index: 400;
+  vertical-align: middle !important;
+  font-size: 12px;
+  word-break: break-word;
 }
 
 .pl-table-row-wrapper {
-  padding: 0 !important;
   height: 75px;
   box-sizing: border-box;
 }
 
 .pl-table-row-wrapper td {
-  padding-left: 0 !important;
   border-top: 1px solid #dcdcdc !important;
 }
 
-.pl-table-row-wrapper > td:first-child {
-  padding-left: 20px !important;
+.pl-table-header-wrapper > th:first-child, .pl-table-row-wrapper > td:first-child {
   border-left: 1px solid #dcdcdc !important;
 }
 
-.pl-table-row-wrapper > td:last-child {
-  padding-right: 20px !important;
-  text-align: right;
+.pl-table-header-wrapper > th:last-child, .pl-table-row-wrapper > td:last-child {
   color: #2095F2 !important;
   border-right: 1px solid #dcdcdc !important;
 }
@@ -324,6 +294,12 @@
   padding: 0 !important;
   color: #5d5d5d !important;
   font-size: 10px;
+}
+
+.pl-table-row-method-logo, .pl-table-row-method-delivery-type, .pl-table-row-method-type,
+.pl-table-header-select, .pl-table-header-transit, .pl-table-header-carrier,
+.pl-table-header-type, .pl-table-header-origin, .pl-table-header-destination {
+  text-align: center !important;
 }
 
 .pl-tbody:last-child > td {
@@ -712,7 +688,7 @@
   margin: 0 !important;
   border: 1px solid #dcdcdc;
   height: 50px;
-  width: 20%;
+  width: 30%;
   background-color: white;
   text-align: center;
   line-height: 50px;
@@ -1221,15 +1197,15 @@
   display: block;
 }
 
-.pl-method-title .pl-national {
+.pl-table-row-method-type .pl-national {
   display: none;
 }
 
-.pl-method-title.pl-national .pl-national {
+.pl-table-row-method-type.pl-national .pl-national {
   display: block;
 }
 
-.pl-method-title.pl-national .pl-international {
+.pl-table-row-method-type.pl-national .pl-international {
   display: none;
 }
 
@@ -1243,7 +1219,7 @@
 
 .pl-help {
   color: #2095F2;
-  padding: 0 0 0 30px !important;
+  padding-left: 20px;
   position: absolute;
   bottom: 10px;
 }
@@ -1297,16 +1273,13 @@
 }
 
 .pl-flash-msg-wrapper {
-  padding: 0 !important;
-  z-index: 499;
   position: absolute;
-  top: -110px;
-  height: 60px;
-  width: calc(100% - 350px);
+  background-color: #ffffff;
+  right: 10px;
+  top: -35px;
 }
 
 .pl-flash-msg {
-  height: 60px !important;
   width: 100%;
   display: none;
 }
@@ -1328,8 +1301,7 @@
 
 .pl-flash-msg-text-section,
 .pl-flash-msg-close-btn {
-  height: 60px;
-  line-height: 55px;
+  line-height: 30px;
 }
 
 .pl-flash-msg-text-section {
@@ -1346,8 +1318,7 @@
   display: none;
   font-size: 20px;
   margin-right: 10px;
-  height: 60px;
-  line-height: 55px;
+  line-height: 30px;
 }
 
 .pl-flash-msg i.success {
@@ -1397,9 +1368,10 @@
   pointer-events: none !important;
   color: #5d5d5d;
   max-width: 24px;
+  margin: auto;
 }
 
-.pl-switch .pl-checked-checkbox {
+.pl-switch .pl-checked-checkbox, .pl-switch.selected .pl-empty-checkbox {
   display: none;
 }
 
@@ -1409,10 +1381,6 @@
 
 .pl-switch.selected .pl-checked-checkbox i {
   color: #2095F2;
-}
-
-.pl-switch.selected .pl-empty-checkbox {
-  display: none;
 }
 
 .md-checkbox input[type=checkbox]:checked + i.md-checkbox-control:before,
@@ -1445,8 +1413,30 @@ body {
   }
 }
 
+@-webkit-keyframes pl-fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 @keyframes pl-rotate {
   100% {
     transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes pl-rotate {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+
+@media screen and (max-width: 1366px) {
+  .pl-table-row-arrow-wrapper, .pl-table-header-arrow {
+    display: none;
   }
 }
